--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "core-js": "^3.6.5",
         "postcss": "^7.0.35",
         "quasar": "^1.0.0",
+        "socket.io-client": "^3.1.0",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
         "vue-i18n": "^8.0.0"
     },
