--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "devDependencies": {
         "@quasar/app": "^3.0.0-beta.1",
+        "@types/lodash": "^4.14.168",
         "@types/node": "^10.17.15",
         "@types/socket.io-client": "^1.4.35",
         "@typescript-eslint/eslint-plugin": "^4.9.0",
