--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "autoprefixer": "^9.8.6",
         "axios": "^0.21.1",
         "core-js": "^3.6.5",
+        "moment": "^2.29.1",
         "postcss": "^7.0.35",
         "quasar": "^2.0.0-beta.1",
         "socket.io-client": "2.3.*",
