--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@tailwindcss/postcss7-compat": "^2.0.3",
         "autoprefixer": "^9.8.6",
         "axios": "^0.21.1",
+        "colors": "^0.6.2",
         "core-js": "^3.6.5",
         "moment": "^2.29.1",
         "postcss": "^7.0.35",
@@ -24,6 +25,7 @@
     },
     "devDependencies": {
         "@quasar/app": "^3.0.0-beta.1",
+        "@types/colors": "^1.2.1",
         "@types/lodash": "^4.14.168",
         "@types/node": "^10.17.15",
         "@types/socket.io-client": "^1.4.35",
