--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "axios": "^0.21.1",
         "colors": "^0.6.2",
         "core-js": "^3.6.5",
+        "mitt": "^2.1.0",
         "moment": "^2.29.1",
         "postcss": "^7.0.35",
         "quasar": "^2.0.0-beta.1",
