--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "moment": "^2.29.1",
         "postcss": "^7.0.35",
         "quasar": "^2.0.0-beta.1",
-        "socket.io-client": "2.3.*",
+        "socket.io-client": "^2.4.0",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
         "vue-i18n": "^9.0.0-beta.0"
     },
