--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "test": "echo \"No test specified\" && exit 0"
     },
     "dependencies": {
+        "@quasar/cli": "^1.2.0",
         "@quasar/extras": "^1.0.0",
         "@tailwindcss/postcss7-compat": "^2.0.3",
         "axios": "^0.21.1",
