--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "emoji.json": "^13.1.0",
         "mitt": "^2.1.0",
         "moment": "^2.29.1",
+        "moment-precise-range-plugin": "^1.3.0",
         "quasar": "^2.0.0-beta.1",
         "socket.io-client": "^2.4.0",
         "ua-parser-js": "^0.7.28",
