--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-ex => PROD_API_ENDPOINT=api.com quasar build use like these. dont use .env
+# ex => PROD_API_ENDPOINT=api.com quasar build use like these. dont use .env
 
 PROD_API_ENDPOINT=
