--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
         "test": "echo \"No test specified\" && exit 0"
     },
     "dependencies": {
-        "@quasar/cli": "^1.2.0",
         "@quasar/extras": "^1.0.0",
-        "@tailwindcss/postcss7-compat": "^2.0.3",
-        "@types/ua-parser-js": "^0.7.36",
         "axios": "^0.21.1",
         "colors": "^0.6.2",
         "core-js": "^3.6.5",
@@ -21,31 +18,28 @@
         "mitt": "^2.1.0",
         "moment": "^2.29.1",
         "moment-precise-range-plugin": "^1.3.0",
-        "quasar": "^2.0.0-beta.1",
-        "socket.io-client": "^2.4.0",
+        "quasar": "^2.0.0",
+        "socket.io-client": "^4.1.3",
         "ua-parser-js": "^0.7.28",
-        "vue-i18n": "^9.0.0-beta.0"
+        "vue-i18n": "^9.0.0-beta.0",
+        "vuex": "^4.0.1"
     },
     "devDependencies": {
-        "@quasar/app": "^3.0.0-beta.1",
+        "@babel/eslint-parser": "^7.13.14",
+        "@quasar/app": "^3.0.0",
         "@types/colors": "^1.2.1",
         "@types/lodash": "^4.14.168",
         "@types/node": "^10.17.15",
-        "@types/socket.io-client": "^1.4.35",
-        "@typescript-eslint/eslint-plugin": "^4.9.0",
-        "@typescript-eslint/parser": "^4.9.0",
-        "autoprefixer": "^10.2.5",
-        "babel-eslint": "^10.0.1",
-        "devtron": "^1.4.0",
-        "electron": "^9.4.3",
-        "electron-debug": "^3.2.0",
-        "electron-devtools-installer": "^3.1.1",
+        "@types/ua-parser-js": "^0.7.36",
+        "@typescript-eslint/eslint-plugin": "^4.16.1",
+        "@typescript-eslint/parser": "^4.16.1",
+        "autoprefixer": "^10.3.1",
         "eslint": "^7.14.0",
-        "eslint-config-prettier": "^6.15.0",
+        "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-vue": "^7.0.0",
-        "postcss": "^8.3.0",
+        "postcss": "^8.3.6",
         "prettier": "2.2.1",
-        "tailwindcss": "^2.1.2"
+        "tailwindcss": "^2.2.7"
     },
     "browserslist": [
         "last 10 Chrome versions",
@@ -59,7 +53,7 @@
         "last 5 Opera versions"
     ],
     "engines": {
-        "node": ">= 10.18.1",
+        "node": ">= 12.22.1",
         "npm": ">= 6.13.4",
         "yarn": ">= 1.21.1"
     }
