fix issue follow as trello

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     },
     "dependencies": {
         "@quasar/extras": "^1.0.0",
+        "@types/crypto-js": "^4.0.2",
         "axios": "^0.21.1",
         "colors": "^0.6.2",
         "core-js": "^3.6.5",
+        "crypto-js": "^4.1.1",
         "emoji.json": "^13.1.0",
         "mitt": "^2.1.0",
         "moment": "^2.29.1",
