--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "core-js": "^3.6.5",
         "crypto-js": "^4.1.1",
         "emoji.json": "^13.1.0",
+        "linkifyjs": "^3.0.0-beta.3",
         "mitt": "^2.1.0",
         "moment": "^2.29.1",
         "moment-precise-range-plugin": "^1.3.0",
@@ -30,6 +31,7 @@
         "@babel/eslint-parser": "^7.13.14",
         "@quasar/app": "^3.0.0",
         "@types/colors": "^1.2.1",
+        "@types/linkifyjs": "^2.1.4",
         "@types/lodash": "^4.14.168",
         "@types/node": "^10.17.15",
         "@types/ua-parser-js": "^0.7.36",
