--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@quasar/extras": "^1.0.0",
         "@types/crypto-js": "^4.0.2",
+        "@vueuse/core": "^6.7.4",
         "@vuex-orm/core": "^0.36.4",
         "axios": "^0.21.1",
         "colors": "^0.6.2",
