--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "quasar": "^2.0.0",
         "socket.io-client": "^4.1.3",
         "ua-parser-js": "^0.7.28",
+        "vue-concurrency": "^2.2.1",
         "vue-i18n": "^9.0.0-beta.0",
         "vuex": "^4.0.1"
     },
