--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "lint": "eslint --ext .js,.ts,.vue ./",
         "test": "echo \"No test specified\" && exit 0",
-        "build:prod": "PROD_API_ENDPOINT=https://chat.exonhost.com:8000 FB_APP_ID=774129166727721 quasar build; cp .gitignore dist/spa/.gitignore"
+        "build:prod": "cross-env PROD_API_ENDPOINT=https://chat.exonhost.com:8000 FB_APP_ID=774129166727721 quasar build; cp .gitignore dist/spa/.gitignore"
     },
     "dependencies": {
         "@quasar/extras": "^1.0.0",
@@ -43,6 +43,7 @@
         "@typescript-eslint/eslint-plugin": "^4.16.1",
         "@typescript-eslint/parser": "^4.16.1",
         "autoprefixer": "^10.3.1",
+        "cross-env": "^7.0.3",
         "eslint": "^7.14.0",
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-vue": "^7.0.0",
